third_party/move/move-compiler-v2/tests/lambda/storable/registry.exp

Diagnostics:
error: unexpected token
   ┌─ tests/lambda/storable/registry.move:29:16
   │
29 │             if f.key == k {
   │                ^
   │                │
   │                Unexpected 'f'
   │                Expected '('
